--- a/static/base.css
+++ b/static/base.css
@@ -88,6 +88,38 @@ body {
     background-color: #016ada;
 }
 
+.darkblue-btn {
+    background-color: #0066d3;
+    color: white;
+    padding: 5px 15px;
+    border-radius: 20px;
+}
+
+.darkblue-btn:hover {
+    background-color: #005abb;
+}
+
+/* <a> elements and <button> elements are styled a little differently by default, so here we fix those differences */
+a.darkblue-btn {
+    color: white;
+    text-decoration: none;
+}
+
+a.darkblue-btn:hover {
+    color: white;
+    text-decoration: none;
+}
+
+button.darkblue-btn {
+    /* Override default */
+    border-width: 0px;
+}
+
+a.darkblue-btn,
+button.darkblue-btn {
+    font: 400 16px Arial !important; /* Fixes bug where <a> and <button> are different heights */
+}
+
 /* For forms */
 .error-msg {
     color: red;
@@ -100,9 +132,140 @@ body {
 .username-link {
     color: inherit;
     text-decoration: none;
-    font-weight: bold;
 }
 .username-link:hover {
     color: inherit;
     text-decoration: underline;
+}
+
+.popup-msg {
+    position: fixed;
+    top: 75px; /* Adjust as needed */
+    /* left: 20px; Adjust as needed */
+    background-color: rgb(94, 222, 111); /* Background color */
+    padding: 10px; /* Padding around the text */
+    border: 1px solid #ccc; /* Border */
+    border-radius: 5px; /* Rounded corners */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Shadow */
+    z-index: 999; /* Ensure the box appears above other content */
+    animation: slideIn 0.5s forwards;
+}
+
+@keyframes slideIn {
+    from {
+        left: -300px; /* Initial position off the screen */
+    }
+    to {
+        left: 20px; /* Final position at top left */
+    }
+}
+
+.close-btn {
+    /* position button top right corner of its parent div */
+    position: absolute;
+    top: -5px;
+    right: 3px;
+
+    cursor: pointer;
+}
+
+.resume-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 10px 0px;
+}
+
+.resume-card {
+    padding: 5px;
+    border: 1px solid #cccdcf;
+    border-radius: 5px;
+    box-shadow: 0 0 3px #ccc;
+    position: relative; /* Enables rated checkmark to have absolute position */
+    flex-basis: calc(33.33% - 10px);
+    height: 300px; /* Give all cards a consistent height */
+    margin-bottom: 10px;
+    background-color: white;
+    transition: transform 0.2s;
+
+}
+
+.resume-card:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+}
+
+/* Media query for smaller viewports */
+@media screen and (max-width: 1200px) {
+    .resume-card {
+      flex-basis: calc(50% - 10px); /* Width is half of the container minus margin */
+    }
+  }
+
+  /* Media query for even smaller viewports */
+  @media screen and (max-width: 600px) {
+    .resume-card {
+      flex-basis: calc(100% - 10px); /* Width is 100% of the container minus margin */
+    }
+  }
+
+.resume-image-skeleton {
+    height: 200px;
+    overflow: hidden; /* Do not let image expand out of its container */
+    background-color:#cccdcf;
+    border-radius: 5px;
+    animation: loading 0.75s infinite alternate;
+}
+
+@keyframes loading {
+    0% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.resume-card-name {
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.resume-card-name,
+.resume-card-text {
+    margin: 0px 5px;
+}
+
+.resume-card-rated-checkmark {
+    position:absolute;
+    top: 5%;
+    right: 5%;
+}
+
+.group-card {
+    padding: 10px;
+    border: 1px solid #cccdcf;
+    border-radius: 5px;
+    box-shadow: 0 0 3px #ccc;
+    background-color: white;
+    margin-bottom: 30px;
+}
+
+.group-card:hover {
+    cursor: pointer;
+    background-color: rgb(240, 240, 240);
+}
+
+.group-card-name {
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.card-subheader {
+    color: #464646;
+}
+
+.page-description {
+    font-size: 20px;
+    margin-bottom: 20px;
 }
