--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
         <a class="nav-element" href="{% url 'index' %}">Explore</a> <!-- Later these 2 will link to separate pages-->
 
         {% if user.is_authenticated %}
-        <a class="nav-element" href="{% url 'groups' %}">Private Groups</a>
+        <a class="nav-element" href="{% url 'groups' %}">Groups</a>
         <a class="nav-element nav-element-right" href="{% url 'logout' %}">Log out</a>
         <a class="nav-element nav-element-right" href="{% url 'user' request.user.id %}">Home</a>
         {% else %}
