--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,10 @@
     <title>ratemyresume</title>
 
     <!-- External sources  -->
+    {% comment %} Bootstrap makes small CSS fixes. DO NOT REMOVE! {% endcomment %}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdn.datatables.net/2.0.3/css/dataTables.dataTables.min.css">
     <script src="https://cdn.datatables.net/2.0.3/js/dataTables.min.js"></script>
 
