--- a/templates/resume_card.html
+++ b/templates/resume_card.html
@@ -13,8 +13,15 @@ script src="% static 'resume_card.js' %"
     <div class="resume-image-skeleton"></div>
 
     {% if hasUserRated %}
-    <div class="resume-card-rated-checkmark">
-        <svg width="40px" height="40px" alt="Checkmark icon" title="You have rated this resume" viewBox="-1.4 -1.4 16.80 16.80" role="img" focusable="false" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0" transform="translate(0,0), scale(1)"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.08399999999999999"></g><g id="SVGRepo_iconCarrier"><path fill="#43a047" d="M1.00000001 7.71134025l3.83505154 3.8041237 8.16494844-8.16494844-.86597938-.86597938L4.83505155 9.7835052 1.86597939 6.81443303z"></path></g></svg>
+    <div class="resume-card-rated-checkmark" >
+        <svg width="40px" height="40px" alt="Checkmark icon" viewBox="-1.4 -1.4 16.80 16.80" role="img" focusable="false" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="#000000">
+            <title>You have rated this resume</title>
+            <g id="SVGRepo_bgCarrier" stroke-width="0" transform="translate(0,0), scale(1)"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.08399999999999999"></g>
+            <g id="SVGRepo_iconCarrier">
+                <path fill="#43a047" d="M1.00000001 7.71134025l3.83505154 3.8041237 8.16494844-8.16494844-.86597938-.86597938L4.83505155 9.7835052 1.86597939 6.81443303z"></path>
+            </g>
+        </svg>
     </div>
     {% endif %}
 
