--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdn.datatables.net/2.0.3/css/dataTables.dataTables.min.css">
     <script src="https://cdn.datatables.net/2.0.3/js/dataTables.min.js"></script>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Style+Script&display=swap" rel="stylesheet">
 
+    
     {% load static %}
     {% comment %} Site-wide static files {% endcomment %}
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
