--- a/static/base.css
+++ b/static/base.css
@@ -1,6 +1,5 @@
 body {
-    /* Default font for entire website - move this to base.css eventually */
-    font-family: "Inter", sans-serif;
+    font-family: "Inter"; /*sans-serif*/
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
@@ -45,19 +44,15 @@ body {
 .page-header {
     font-size: 35px;
     font-weight: bold;
-
-    /* border-bottom: 1px solid #cccdcf; */
     margin-bottom: 20px;
     margin-top: 35px;
 }
 
 .sub-header {
-    font-weight: 400;
-    font-style: normal;
-
+    font-size: 25px;
     border-bottom: 1px solid #cccdcf;
-    margin-bottom: 20px;
     margin-top: 35px;
+    margin-bottom: 20px;
 }
 
 /* This will be the universal table for the site */
