--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Style+Script&display=swap" rel="stylesheet">
 
-    
+
     {% load static %}
     {% comment %} Site-wide static files {% endcomment %}
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
@@ -46,6 +46,9 @@
         {% endif %}
 
     </nav>
+
+    {% block heros %}
+    {% endblock %}
 
     <div class="content">
         {% block content %}
