--- a/resumes/templates/resumes/index.html
+++ b/resumes/templates/resumes/index.html
@@ -7,9 +7,8 @@
     <script src="{% static 'resume_card.js' %}"></script>
 {% endblock %}
 
-{% if not user.is_authenticated %}
-    {% block heros %}
-
+{% block heros %}
+    {% if not user.is_authenticated %}
         <div class="hero">
             <div class="hero-title gradient-blue">Get a rating from 0 to 10 for your resume.</div>
             <div class="hero-text">Real people, not robots, rate your resume.</div>
@@ -46,8 +45,9 @@
             <a class="btn-alt-option" href="{% url 'login' %}">I already have an account</a>
         </div>
 
-    {% endblock %}
-{% endif %}
+
+    {% endif %}
+{% endblock %}
 
 {% block content %}
 
@@ -57,7 +57,7 @@
 {% if new_resumes %}
     <div class="resume-card-container">
         {% for resume in new_resumes %}
-            {% include 'resume_card.html' with resume_id=resume.id user_id=resume.user.id user=resume.user resume_name=resume.name hasUserRated=resume.hasUserRated created_at=resume.created_at %}
+            {% include 'resume_card.html' with resume_id=resume.id user_id=resume.user.id user=resume.user resume_name=resume.name hasUserRated=resume.hasUserRated created_at=resume.created_at avgRating=resume.avgRating %}
         {% endfor %}
     </div>
 {% else %}
@@ -69,7 +69,7 @@
 {% if highest_rated_resumes %}
     <div class="resume-card-container">
         {% for resume in highest_rated_resumes %}
-            {% include 'resume_card.html' with resume_id=resume.id user_id=resume.user.id user=resume.user resume_name=resume.name hasUserRated=resume.hasUserRated created_at=resume.created_at %}
+            {% include 'resume_card.html' with resume_id=resume.id user_id=resume.user.id user=resume.user resume_name=resume.name hasUserRated=resume.hasUserRated created_at=resume.created_at avgRating=resume.avgRating %}
         {% endfor %}
     </div>
 {% else %}
