--- a/static/base.css
+++ b/static/base.css
@@ -72,13 +72,14 @@ body {
 .page-header {
     font-size: 35px;
     font-weight: bold;
-    margin-bottom: 20px;
     margin-top: 35px;
+    margin-bottom: 20px;
 }
 
 .sub-header {
     font-size: 25px;
-    border-bottom: 1px solid #cccdcf;
+    font-weight: bold;
+    /* border-bottom: 1px solid #cccdcf; */
     margin-top: 35px;
     margin-bottom: 20px;
 }
@@ -259,10 +260,16 @@ button.darkblue-btn {
     margin: 0px 5px;
 }
 
-.resume-card-rated-checkmark {
+.resume-card-avgrating {
     position:absolute;
     top: 5%;
     right: 5%;
+}
+
+.resume-card-rated-checkmark {
+    position:absolute;
+    top: 30%;
+    right: 50%;
 }
 
 .group-card {
